Add swagger.json route to fix Swagger UI
